--- a/app/src/main/res/layout/mypage.xml
+++ b/app/src/main/res/layout/mypage.xml
@@ -38,30 +38,31 @@
 
                 <TextView
                     android:id="@+id/textViewNickName"
+                    style="@style/AppTheme"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="60dp"
                     android:text="NickName"
-                    style="@style/AppTheme"
                     android:textSize="18sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/Camera"
-                    app:layout_constraintStart_toStartOf="@+id/Camera"
-                    app:layout_constraintBottom_toTopOf="@+id/textViewEmail"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toEndOf="@+id/profileImage"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/textViewEmail"
+                    style="@style/AppTheme"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
+                    android:layout_marginBottom="316dp"
                     android:text="Email"
                     android:textSize="16sp"
-                    style="@style/AppTheme"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/Camera"
-                    app:layout_constraintStart_toStartOf="@+id/Camera"
                     app:layout_constraintBottom_toTopOf="@+id/Camera"
-                    app:layout_constraintHorizontal_bias="0.5"/>
+                    app:layout_constraintEnd_toEndOf="@+id/textViewNickName"
+                    app:layout_constraintHorizontal_bias="0.043"
+                    app:layout_constraintStart_toStartOf="@+id/textViewNickName" />
+
                 <ImageView
                     android:id="@+id/profileImage"
                     android:layout_width="100dp"
@@ -99,7 +100,6 @@
                     app:layout_constraintEnd_toEndOf="@+id/Camera"
                     app:layout_constraintStart_toStartOf="@+id/Camera"
                     app:layout_constraintTop_toBottomOf="@+id/Camera" />
-
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
