--- a/app/src/main/res/layout/mypage.xml
+++ b/app/src/main/res/layout/mypage.xml
@@ -66,6 +66,7 @@
 
                 <Button
                     android:id="@+id/buttonEditProfile"
+                    style="@style/TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="180dp"
@@ -112,13 +113,18 @@
                     app:layout_constraintStart_toStartOf="@+id/Camera"
                     app:layout_constraintTop_toBottomOf="@+id/Camera" />
                 <Button
-                    android:id="@+id/buttonDeleteAccount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="계정 삭제하기"
+                    android:id="@+id/buttonWithdraw"
+                    style="@style/TextButton"
+                    android:layout_width="120dp"
+                    android:layout_height="38dp"
+                    android:layout_marginTop="24dp"
+                    android:text="탈퇴하기"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.019"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/buttonManage" />
+                    app:layout_constraintTop_toBottomOf="@id/profileImage" />
+
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
